# awesome-computer-vision

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-stats.yml
data/: history.json  repos.yaml  status.json
scripts/: __init__.py  fetcher.py  generator.py  models.py  storage.py  update_stats.py
